# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,8 @@ import machinesRouter from "./machines";
 import visualizationsRouter from "./visualizations";
 import adminSettingsRouter from "./adminSettings";
 import viewerDataRouter from "./viewerData";
+import visualizationAssetsRouter from "./visualization-assets";
+import visualizationSettingsRouter from "./visualization-settings";
 
 const router: IRouter = Router();
 
@@ -14,5 +16,7 @@ router.use(machinesRouter);
 router.use(visualizationsRouter);
 router.use(adminSettingsRouter);
 router.use(viewerDataRouter);
+router.use(visualizationAssetsRouter);
+router.use(visualizationSettingsRouter);
 
 export default router;
